Fix z-index bug for Macs

--- a/css/app.css
+++ b/css/app.css
@@ -42,7 +42,7 @@ body {
 	background: rgba(242,242,242,1);
 	/* Needed for parallax in Firefox */
 	transform-style: inherit;
-	z-index: 1;
+	z-index: 2;
 
 	display: flex;
 	flex-wrap: wrap;
@@ -67,7 +67,7 @@ body {
 	position: relative;
 	min-height: 480px;
 	background: linear-gradient(260deg, rgb(26, 80, 30) 0%, rgb(23, 117, 44) 70%);
-	z-index: 2;
+	z-index: 3;
 	
 	display: flex;
 	flex-wrap: wrap;
